--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -3,7 +3,14 @@
 {
 	"name": "Python 3",
 	// Or use a Dockerfile or Docker Compose file. More info: https://containers.dev/guide/dockerfile
-	"image": "mcr.microsoft.com/devcontainers/python:1-3.10-bullseye"
+	"image": "mcr.microsoft.com/devcontainers/python:1-3.10-bullseye",
+	"customizations": {
+		"vscode": {
+			"extensions": [
+				"ms-toolsai.vscode-jupyter-cell-tags"
+			]
+		}
+	}
 
 	// Features to add to the dev container. More info: https://containers.dev/features.
 	// "features": {},
